<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/accounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wash"
            android:paddingLeft="15dp"
            android:paddingTop="28dp"
            android:paddingBottom="12dp"
            android:text="@string/accounts"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="bold" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/swipesText"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textColor="#222222"
                android:text="@string/meal_swipes"/>
            <TextView
                android:id="@+id/swipesValue"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="#7d8288"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/brbText"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textColor="#222222"
                android:text="@string/brbs"
                />
            <TextView
                android:id="@+id/brbValue"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="#7d8288"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cityBucksText"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="#222222"
                android:text="@string/city_bucks"
                />
            <TextView
                android:id="@+id/cityBucksValue"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="#7d8288"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/laundryText"
                android:paddingTop="15dp"
                android:paddingBottom="20dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textColor="#222222"
                android:text="@string/laundry"
                />
            <TextView
                android:id="@+id/laundryValue"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:fontFamily="sans-serif"
                android:textSize="17sp"
                android:textColor="#7d8288"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wash"
            android:paddingLeft="16dp"
            android:paddingTop="28dp"
            android:paddingBottom="12dp"
            android:text="@string/history"
            android:textColor="@color/primary"
            android:textSize="30dp"
            android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>