<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainListFragment">

    <HorizontalScrollView
        android:id="@+id/scroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/nearestFirstButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:minWidth="75dp"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/nearest_first_filter"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/northButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:minWidth="75dp"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/north_filter"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/westButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:minWidth="75dp"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/west_filter"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/centralButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:minWidth="75dp"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/central_filter"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/swipes"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:minWidth="75dp"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/swipes_filter"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/brb"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:minWidth="75dp"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/brb_filter"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cafe_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

<!-- popup button on main screen -->
<!--    <ImageButton-->
<!--        android:id="@+id/buttonPopUp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="#00FFFFFF"-->
<!--        android:src="@drawable/appdev_blue"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
