<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".PrivacyFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

            <TextView
                android:id="@+id/privacyHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="20dp"
                android:layout_gravity="center"
                android:text="@string/privacy_statement"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/privacy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingTop="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/privacy_description_1"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/privacy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingTop="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/privacy_description_2"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/privacy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingTop="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/privacy_description_3"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>